Fix link spacing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,7 @@ header {
 }
 
 .spacer {
-  width: 17px;
+  width: 8px;
 }
 
 ul.grey {
